# academic-research-assistant

./: .env  .env.example  .gitattributes  .gitignore  0.6.18  0.8.6  Academic_Research_Assistant_Project_Report.docx  COLAB_SETUP_GUIDE.py  CONFIG_UPDATE_SUMMARY.md  DASHBOARD_REALITY_CHECK.md  ERROR_RESOLUTION_COMPLETE.md  ERROR_RESOLUTION_FINAL.md  ERROR_RESOLUTION_SUMMARY.md  EXPORT_FEATURES.md  FINAL_ERROR_VERIFICATION_REPORT.md  FINAL_STATUS_COMPLETE.md  GIT_UPDATE_COMPLETE.md  INTEGRATED_UI_GUIDE.md  LAUNCH_GUIDE.md  ORGANIZATION_COMPLETE.md  Open_Alex_test.py  PERFORMANCE_FIXES_REPORT.md  PROJECT_ORGANIZATION_REPORT.md  PROJECT_STRUCTURE.md  QA_AGENT_OPTIMIZATION_COMPLETE.md  README.markdown  README.md  REPOSITORY_UPDATE_SUMMARY.md  ROOT_STRUCTURE_VALIDATION.md  START_HERE.bat  colab_setup.py  comprehensive_test.py  config.yaml  css_blocker_diagnostic.py  css_optimization_report.py  css_optimizer.py  debug_qa.py  demo_launch.bat  demo_launch.ps1  demo_qa_feature.py  (+28 more)
.streamlit/: config.toml
config/: demo_config.json  performance.json
config_backups/: config_backup.yaml  config_correct.yaml  config_minimal.yaml  config_performance_optimized.yaml
data/: backup_research_db_20250805_154302.db  research.db
data/cache/: checkpoint_Electric cars_literature_survey.json
docs/: DATABASE_ENHANCEMENT_SUMMARY.md  ENHANCED_QA_IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROFESSIONAL_ORGANIZATION_GUIDE.md  PROJECT_OPTIMIZATION_COMPLETE.md  PROJECT_ORGANIZATION_REPORT.md  PROJECT_STRUCTURE_OPTIMIZATION.md  QA_ENHANCEMENT_PLAN.md  QA_ENHANCEMENT_SUMMARY.md  QA_FEATURE_GUIDE.md  README.md  README_ALTERNATIVE.md  SYSTEM_OPTIMIZATION_COMPLETE.md
docs/status_reports/: ERROR_FIXES_SUMMARY.md  OPENALEX_FIX_COMPLETE.md
docs/ui/: UI_CLEANUP_SUMMARY.md  UI_INTEGRATION_COMPARISON.md
scripts/: README.md  check_db.py  check_root_structure.py  css_blocker_diagnostic.py  dashboard_health_check.py  dashboard_performance.py  install_enhanced_qa.bat  install_export_deps.bat  organize_project.bat  organize_project.py  production_error_handler.py  production_validator.py  professional_error_handler.py  professional_validation.py  setup_dev.py
scripts/launch/: launch_clean.bat  launch_clean.sh  launch_integrated_dashboard.bat  launch_integrated_dashboard.sh
src/: __init__.py
src/agents/: __init__.py  citation_generator_agent.py  draft_writer_agent.py  literature_survey_agent.py  note_taking_agent.py  qa_agent.py  simplified_qa.py  theme_synthesizer_agent.py
src/crew/: __init__.py  research_crew.py
src/llm/: __init__.py  gemini_client.py  llm_factory.py  openai_client.py  optimized_gemini_client.py
src/storage/: __init__.py  database.py  models.py
src/tools/: Cross_Ref_tool.py  Open_Alex_tool.py  __init__.py  arxiv_tool.py  citation_formatter.py  (+2 more)
tests/: README.md  check_db_schema.py  clean_test.py  complete_workflow_test.py  conftest.py  debug_test.py  enhanced_dashboard_testing.py  fix_all_errors.py  functional_test.py  performance_demo.py  performance_test.py  quick_test.py  test_async_api_manager.py  test_dashboard_functionality.py  test_db_check.py  test_fixes.py  test_integrated_dashboard.py  test_literature_survey.py  test_metrics.py  test_paper_cards.py  test_qa_agent_comprehensive.py  test_qa_efficiency.py  test_qa_feature.py  test_search.py
(+42 files in other folders)
